# py-news-m

./: .export-ignore  .gitignore  AGENTS.md  README.md  UNDERSTANDING_AND_ADAPTATION_NOTES.md  pyproject.toml
docs/: AUGMENTATION_DIRECTION.md  CODEX_PRIMARY_PROMPT.md  CODEX_TASKLIST.md  DATA_SOURCES.md  OPERATOR_VALIDATION.md  REFDATA_SCHEMA.md  STORAGE_LAYOUT.md  TARGET_ARCHITECTURE.md  WAVE1_MIGRATION_NOTE.md  WAVE1_M_CACHE_MIGRATION_NOTE.md  WAVE2_MIGRATION_NOTE.md  WAVE3_MIGRATION_NOTE.md  WAVE4_MIGRATION_NOTE.md  WAVE5_MIGRATION_NOTE.md  WAVE7_1_MIGRATION_NOTE.md  WAVE7_1_RELEASE_EXECUTION_POLICY.md  WAVE7_2_COMPANION_POLICY.md  WAVE7_2_MIGRATION_NOTE.md  WAVE7_LIFECYCLE_POLICY.md  WAVE7_MIGRATION_NOTE.md
m_cache_shared/: __init__.py  cli_helpers.py  models.py  packers.py  schemas.py  vocab.py
py_news/: __init__.py  __main__.py  audit.py  augmentation.py  cache_layout.py  cli.py  config.py  content.py  html_extract.py  http.py  lookup.py  m_cache_cli.py  m_cache_config.py  m_cache_runtime.py  m_cache_shared_pin.py  m_cache_shared_shim.py  models.py  newsdata.py  providers.py  rate_limit.py  reason_codes.py  resolution.py  runtime_output.py
requirements/: dev.txt  m_cache_shared_external.txt
scripts/: demo_resolution_flow.sh
tests/: test_adapter_local_tabular.py  test_adapter_nyt_archive.py  test_api.py  test_audit.py  test_augmentation_artifact_reservations.py  test_augmentation_contracts.py  test_backfill_phase3.py  test_cache_rebuild.py  test_cli.py  test_config.py  test_content_fetch.py  test_gdelt_recent_adapter.py  test_http.py  test_identity.py  (+16 more)
(+52 files in other folders)
